# scribus

CVSROOT/: config  loginfo
Scribus/: CMakeLists.txt
Scribus/scribus/: CMakeLists.txt  pageitem.cpp  pageitem_textframe.cpp  shaper.cpp  shaper.h
Scribus/scribus/fribidi/: CMakeLists.txt
Scribus/scribus/ui/: filetoolbar.cpp
Scribus/win32/vc8/gettext-textfilter/: gettext-textfilter.vcproj
Subik/colorwheel/: Makefile  colorwheel  colorwheel.pro  colorwheelwidget.cpp  colorwheelwidget.h  cwdialog.cpp  cwdialog.h  main.cpp  moc_colorwheelwidget.cpp  moc_cwdialog.cpp
Subik/donothingplugin/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.in  libtool
Subik/donothingplugin/donothingplugin/: Makefile.am  Makefile.in  myplugin.cpp  myplugin.h
Subik/misc/: player.py
Subik/scribus-colorwheel/colorwheel/: Makefile.am  colorwheel.cpp  colorwheel.h  colorwheelwidget.cpp  colorwheelwidget.h  cwdialog.cpp  cwdialog.h
Subik/scribus-index/index/: Makefile.am  index.cpp  index.h  indexdialog.cpp  indexdialog.h  indexdialog.ui  indexdialog.ui.h
Subik/scribus-lorem-ipsum/lorem-ipsum/: Makefile.am  lorembase.cpp  lorembase.h  loremconfig.cpp  loremconfig.h  loremdialog.cpp  loremdialog.h  loremdialog.ui  loremdialog.ui.h  loremipsum.cpp  loremipsum.h  loremnetwork.cpp  loremnetwork.h  loremstandard.cpp  loremstandard.h  loremturkey.cpp  loremturkey.h
Subik/scribus-lorem-ipsum/lorem-ipsum/config/: Makefile.am  example.xml  latin.xml  letzebuergesch.xml  lorem-ipsum.xml  lorem_ipsum.xml  turkey-bass.txt  turkey-czech-ascii.txt  turkey-czech.txt  turkey-default.txt
Subik/scribus-plugin/: generate  scribus-plugin.xml
Subik/scribus-short-words/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.in  libtool  scribus-short-words-1.2-rc.pro
Subik/scribus-short-words/autom4te.cache/: output.0  traces.0
Subik/scribus-short-words/scribus-short-words/: Makefile  Makefile.am  Makefile.in  configuration.cpp  configuration.h  parse.cpp  shortwords.cpp  shortwords.h  version.h  vlnadialog.cpp
Subik/scribus-short-words/scribus-short-words/cfg/: Makefile  Makefile.am  Makefile.in  scribus-short-words.rc
Subik/scribus-short-words/scribus-short-words/docs/: Makefile  Makefile.am  Makefile.in  index.html
Subik/scribus-short-words/scribus-short-words/docs/cs/: Makefile  Makefile.am  Makefile.in  short-words-manual.html  short-words-manual.xml
Subik/scribus-short-words/scribus-short-words/docs/en/: Makefile  Makefile.am  Makefile.in  short-words-manual.html  short-words-manual.xml  yarpen_docbook.css
Subik/scribus-short-words/scribus-short-words/docs/fr/: Makefile  Makefile.am  Makefile.in  short-words-manual.html  short-words-manual.xml
Subik/scribus-short-words/scribus-short-words/docs/pl/: Makefile  Makefile.am  Makefile.in  short-words-manual.html  short-words-manual.xml
Subik/scribus-short-words/scribus-short-words/translation/: Makefile  Makefile.am  Makefile.in  libscribusshortwords.cs.qm  libscribusshortwords.cs.ts  libscribusshortwords.fr.qm  libscribusshortwords.fr.ts  libscribusshortwords.pl.qm  libscribusshortwords.pl.ts  libscribusshortwords.sk.qm  libscribusshortwords.sk.ts
Subik/scribus-vlna/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool
Subik/scribus-vlna/svlna/: Makefile.am  Makefile.in  frame.cpp  frame.h  selection.cpp  selection.h  svlna.cpp  svlna.h  vlnadialog.cpp  vlnadialog.h  vlnapage.cpp  vlnapage.h
Subik/scribus-vlna/svlna/doc/: Makefile.am  Makefile.in  index.cz.html  index.en.html  mkxml  scribus-vlna.sla  vlna-example.sla  vlna-help-en.xml  vlna-help.xml  vlna.sla  yarpen_docbook.css
Subik/scribus-vlna/svlna/translation/: Makefile.am  Makefile.in  libscribusvlna.cs.qm  libscribusvlna.cs.ts
Subik/scribus-vlna/svlna/ui/: vlnadialog.cpp  vlnadialog.h  vlnadialog.ui  vlnadialog.ui.h
Subik/scridoc/: scridoc.py  test.py  test1.py
admin/: README
lprof/: Makefile  README  SConstruct  manual.txt
lprof/data/desktop/: qtmeasurementtool.desktop  qtmonitorprofiler.desktop  qtprofilechecker.desktop  qtscannerprofiler.desktop
lprof/data/pics/: MonitorTemplate.it8  grayscale.tif  scandmo.it8  srgb.it8
lprof/data/profiles/: CIEE.icm  scandmo.icm
lprof/data/targets/Agfa/Emissive/: Ap0218xx.txt  Ap1012xx.txt  Ap1120xx.txt  Az0329xx.txt  Az0623xx.txt  Az0702xx.txt  Az0706xx.txt  (+25 more)
lprof/data/targets/Wolf/: R011220.txt
lprof/data/template/: AVOID.ITX  IT8_19.ITX  IT8_22.ITX  KODAK.ITX
lprof/doc/: Makefile
lprof/include/: lcmsprf.h
lprof/rpm/: lprof.spec.RedHat  lprof.spec.SuSE
lprof/src/: Makefile  SConscript  cmshull.c  cmslm.c  cmsmatn.c  cmsmntr.c  cmspcoll.c  cmsreg.c  cmssheet.c  makefile
lprof/src/ICCtoIT8/: Makefile  SConscript  icc2it8.c
lprof/src/liblprof/: Makefile  SConscript  cmslnr.c  cmsmkmsh.c  cmsoutl.c  cmsprf.c  cmsscn.c
lprof/src/libqtlcmswidgets/: Makefile  qtlcmswidgets.cpp  qtlcmswidgets.h
lprof/src/qtMeasurementTool/: Makefile  SConscript  main.cpp  qtmeasurementtooldialog.cpp  qtmeasurementtooldialog.h  qtmeasurementtooldialogbase.ui
lprof/src/qtMonitorProfiler/: Makefile  SConscript  main.cpp  qtmonitorprofilerdialog.cpp  qtmonitorprofilerdialog.h  qtmonitorprofilerdialogbase.ui
lprof/src/qtProfileChecker/: Makefile  SConscript  main.cpp  qtcietonge.cpp  qtdrawcurve.cpp  qtprofilecheckerdialog.cpp  qtprofilecheckerdialog.h  qtprofilecheckerdialogbase.ui
lprof/src/qtScannerProfiler/: Makefile  SConscript  main.cpp  qtscannerprofilerdialog.cpp  qtscannerprofilerdialog.h  qtscannerprofilerdialogbase.ui
sctools/: collectdeps  getdeps  scribus.wrapper  scribusbuild  trupdate.py
sctools/static_build_data/: local.conf
sctools/testingscripts/: constqstring.sh  cstringlength.sh  deleteprivate.sh  donot.sh  headerincluded.sh  homedircheck.sh  noifbody.sh  nolistend.sh  postincrement.sh  qptrlist.sh  qstringempty.sh  qstringnull.sh  startswith.sh  swears.sh  thispointer.sh  true.sh
(+160 files in other folders)
