####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = dialog_cs.png dialog.png index.cz.html menu.png scribus-vlna.pdf scribus-vlna.png scribus-vlna.sla status.png vlna-dialog.png vlna-help.xml vlna.pdf vlna.sla yarpen_docbook.css vlna-help-en.xml index.en.html

install-data-local:
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/dialog_cs.png $(prefix)/lib/scribus/doc/vlna/dialog_cs.png
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/dialog.png $(prefix)/lib/scribus/doc/vlna/dialog.png
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/index.cz.html $(prefix)/lib/scribus/doc/vlna/index.cz.html
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/index.en.html $(prefix)/lib/scribus/doc/vlna/index.en.html
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/menu.png $(prefix)/lib/scribus/doc/vlna/menu.png
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/scribus-vlna.pdf $(prefix)/lib/scribus/doc/vlna/scribus-vlna.pdf
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/scribus-vlna.png $(prefix)/lib/scribus/doc/vlna/scribus-vlna.png
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/scribus-vlna.sla $(prefix)/lib/scribus/doc/vlna/scribus-vlna.sla
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/status.png $(prefix)/lib/scribus/doc/vlna/status.png
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/vlna-dialog.png $(prefix)/lib/scribus/doc/vlna/vlna-dialog.png
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/vlna-help.xml $(prefix)/lib/scribus/doc/vlna/vlna-help.xml
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/vlna-help-en.xml $(prefix)/lib/scribus/doc/vlna/vlna-help-en.xml
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/vlna.pdf $(prefix)/lib/scribus/doc/vlna/vlna.pdf
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/vlna.sla $(prefix)/lib/scribus/doc/vlna/vlna.sla
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/vlna-example.sla $(prefix)/lib/scribus/doc/vlna/vlna-example.sla
	$(mkinstalldirs) $(prefix)/lib/scribus/doc/vlna/
	$(INSTALL_DATA) $(srcdir)/yarpen_docbook.css $(prefix)/lib/scribus/doc/vlna/yarpen_docbook.css

uninstall-local:
	-rm -f $(prefix)/lib/scribus/doc/vlna/dialog_cs.png
	-rm -f $(prefix)/lib/scribus/doc/vlna/dialog.png
	-rm -f $(prefix)/lib/scribus/doc/vlna/index.cz.html
	-rm -f $(prefix)/lib/scribus/doc/vlna/index.en.html
	-rm -f $(prefix)/lib/scribus/doc/vlna/menu.png
	-rm -f $(prefix)/lib/scribus/doc/vlna/scribus-vlna.pdf
	-rm -f $(prefix)/lib/scribus/doc/vlna/scribus-vlna.png
	-rm -f $(prefix)/lib/scribus/doc/vlna/scribus-vlna.sla
	-rm -f $(prefix)/lib/scribus/doc/vlna/status.png
	-rm -f $(prefix)/lib/scribus/doc/vlna/vlna-dialog.png
	-rm -f $(prefix)/lib/scribus/doc/vlna/vlna-help.xml
	-rm -f $(prefix)/lib/scribus/doc/vlna/vlna-help-en.xml
	-rm -f $(prefix)/lib/scribus/doc/vlna/vlna.pdf
	-rm -f $(prefix)/lib/scribus/doc/vlna/vlna.sla
	-rm -f $(prefix)/lib/scribus/doc/vlna/yarpen_docbook.css
	-rm -f $(prefix)/lib/scribus/doc/vlna/vlna-example.sla


