EXTRA_DIST = after_short_words.png before_short_words.png dialog.png menu.png short-words-manual.html short-words-manual.xml yarpen_docbook.css

install-data-local:
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/cs/
	$(INSTALL_DATA) $(srcdir)/after_short_words.png $(prefix)/share/scribus/doc/scribus-short-words/cs/after_short_words.png
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/cs/
	$(INSTALL_DATA) $(srcdir)/before_short_words.png $(prefix)/share/scribus/doc/scribus-short-words/cs/before_short_words.png
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/cs/
	$(INSTALL_DATA) $(srcdir)/dialog.png $(prefix)/share/scribus/doc/scribus-short-words/cs/dialog.png
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/cs/
	$(INSTALL_DATA) $(srcdir)/menu.png $(prefix)/share/scribus/doc/scribus-short-words/cs/menu.png
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/cs/
	$(INSTALL_DATA) $(srcdir)/short-words-manual.html $(prefix)/share/scribus/doc/scribus-short-words/cs/short-words-manual.html
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/cs/
	$(INSTALL_DATA) $(srcdir)/short-words-manual.xml $(prefix)/share/scribus/doc/scribus-short-words/cs/short-words-manual.xml
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/cs/
	$(INSTALL_DATA) $(srcdir)/yarpen_docbook.css $(prefix)/share/scribus/doc/scribus-short-words/cs/yarpen_docbook.css

uninstall-local:
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/cs/after_short_words.png
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/cs/before_short_words.png
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/cs/dialog.png
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/cs/menu.png
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/cs/short-words-manual.html
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/cs/short-words-manual.xml
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/cs/yarpen_docbook.css
