EXTRA_DIST = after_short_words.png before_short_words.png dialog.png menu.png short-words-manual.html short-words-manual.xml yarpen_docbook.css

install-data-local:
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/pl/
	$(INSTALL_DATA) $(srcdir)/after_short_words.png $(prefix)/share/scribus/doc/scribus-short-words/pl/after_short_words.png
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/pl/
	$(INSTALL_DATA) $(srcdir)/before_short_words.png $(prefix)/share/scribus/doc/scribus-short-words/pl/before_short_words.png
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/pl/
	$(INSTALL_DATA) $(srcdir)/dialog.png $(prefix)/share/scribus/doc/scribus-short-words/pl/dialog.png
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/pl/
	$(INSTALL_DATA) $(srcdir)/menu.png $(prefix)/share/scribus/doc/scribus-short-words/pl/menu.png
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/pl/
	$(INSTALL_DATA) $(srcdir)/short-words-manual.html $(prefix)/share/scribus/doc/scribus-short-words/pl/short-words-manual.html
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/pl/
	$(INSTALL_DATA) $(srcdir)/short-words-manual.xml $(prefix)/share/scribus/doc/scribus-short-words/pl/short-words-manual.xml
	$(mkinstalldirs) $(prefix)/share/scribus/doc/scribus-short-words/pl/
	$(INSTALL_DATA) $(srcdir)/yarpen_docbook.css $(prefix)/share/scribus/doc/scribus-short-words/pl/yarpen_docbook.css

uninstall-local:
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/pl/after_short_words.png
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/pl/before_short_words.png
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/pl/dialog.png
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/pl/menu.png
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/pl/short-words-manual.html
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/pl/short-words-manual.xml
	-rm -f $(prefix)/share/scribus/doc/scribus-short-words/pl/yarpen_docbook.css